--- a/portfolio-main/public/index.html
+++ b/portfolio-main/public/index.html
@@ -14,12 +14,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script>
-      document.addEventListener('contextmenu', (e) => { e.preventDefault() });
-      document.addEventListener('keydown', (e) => {
-        if (e.key === 'F12' || e.key === 'Escape' || e.key === 'Alt' || e.key === 'Meta' || e.key === 'x') {
-          e.preventDefault();
-        }
-      });
+      // document.addEventListener('contextmenu', (e) => { e.preventDefault() });
+      // document.addEventListener('keydown', (e) => {
+      //   if (e.key === 'F12' || e.key === 'Escape' || e.key === 'Alt' || e.key === 'Meta' || e.key === 'x') {
+      //     e.preventDefault();
+      //   }
+      // });
     </script>
   </body>
 </html>
